@@ -1,3 +1,6 @@
+Thu May 21 18:30:48 CEST 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
+	* src/odbc/unittests/blob1.c: add wchar test
+
 Wed May 20 18:36:51 CEST 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
 	* src/dblib/bcp.c: prevent core and return error
 
@@ -1556,4 +1559,4 @@ Wed Jan  9 19:54:43 EST 2008	JK Lowden <jklowden@freetds.org>
 	* ChangeLog  truncated because of release
 	* ChangeLog-0.82 added because of release
 	
-$Id: ChangeLog,v 1.2790 2009/05/20 16:36:58 freddy77 Exp $
+$Id: ChangeLog,v 1.2791 2009/05/21 16:30:57 freddy77 Exp $
